--- a/Sanjay Project/storyboards/Main2.storyboard
+++ b/Sanjay Project/storyboards/Main2.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -9,28 +9,28 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Add item-->
+        <!--UpdateProductVC-->
         <scene sceneID="XGQ-BF-NnW">
             <objects>
-                <viewController storyboardIdentifier="UpdateProductVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eSB-5p-vOX" customClass="UpdateProductVC" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UpdateProductVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eSB-5p-vOX" userLabel="UpdateProductVC" customClass="UpdateProductVC" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TKY-HD-7PL">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Twi-ZW-ulm">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="59" width="430" height="839"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ngt-9R-axA">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="864"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="935.66666666666663"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update Item: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7P-Cd-upW">
-                                                <rect key="frame" x="20" y="20" width="353" height="21"/>
+                                                <rect key="frame" x="20" y="20" width="390" height="21"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IT5-KN-vbX">
-                                                <rect key="frame" x="30" y="480" width="333" height="50"/>
+                                                <rect key="frame" x="30" y="480" width="370" height="50"/>
                                                 <color key="backgroundColor" red="0.57553727190000004" green="0.77047475610000005" blue="0.59352895480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="1hr-a6-Xei"/>
@@ -51,23 +51,23 @@
                                                 </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add new item name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d9H-xu-1wD">
-                                                <rect key="frame" x="20" y="81" width="353" height="34"/>
+                                                <rect key="frame" x="20" y="81" width="390" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9s1-My-7VU">
-                                                <rect key="frame" x="20" y="157" width="353" height="34"/>
+                                                <rect key="frame" x="20" y="157" width="390" height="34"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEK-zx-MLR">
-                                                <rect key="frame" x="20" y="135" width="353" height="17"/>
+                                                <rect key="frame" x="20" y="135" width="390" height="17"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xcm-a8-ekJ">
-                                                <rect key="frame" x="10" y="51" width="373" height="17"/>
+                                                <rect key="frame" x="10" y="51" width="410" height="17"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pYl-xP-w5S">
-                                                <rect key="frame" x="96.666666666666686" y="260" width="200" height="200"/>
+                                                <rect key="frame" x="115" y="260" width="200" height="200"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="200" id="ctW-6a-oNi"/>
                                                     <constraint firstAttribute="height" constant="200" id="eyG-AC-8tP"/>
@@ -98,7 +98,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VnX-Tv-v1I">
-                                                <rect key="frame" x="30" y="545" width="333" height="50"/>
+                                                <rect key="frame" x="30" y="545" width="370" height="50"/>
                                                 <color key="backgroundColor" red="0.57553727190000004" green="0.77047475610000005" blue="0.59352895480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="G1t-xo-69F"/>
@@ -115,10 +115,17 @@
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="actionAddNewItem:" destination="eSB-5p-vOX" eventType="touchUpInside" id="OLi-yh-B2I"/>
                                                     <action selector="actionDeleteItem:" destination="eSB-5p-vOX" eventType="touchUpInside" id="pUW-lv-5rv"/>
                                                 </connections>
                                             </button>
+                                            <imageView hidden="YES" clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cross" translatesAutoresizingMaskIntoConstraints="NO" id="ZHO-He-6uj">
+                                                <rect key="frame" x="296" y="260" width="25" height="25"/>
+                                                <color key="tintColor" red="1" green="0.13166032359999999" blue="0.18741810549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="FMz-F4-4CL"/>
+                                                    <constraint firstAttribute="width" constant="25" id="vB0-pE-b1M"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -129,12 +136,14 @@
                                             <constraint firstItem="IT5-KN-vbX" firstAttribute="centerX" secondItem="ngt-9R-axA" secondAttribute="centerX" id="6qX-7u-PXn"/>
                                             <constraint firstItem="pYl-xP-w5S" firstAttribute="top" secondItem="50A-z8-ANk" secondAttribute="bottom" constant="35" id="8Me-aL-hnf"/>
                                             <constraint firstItem="d9H-xu-1wD" firstAttribute="top" secondItem="Xcm-a8-ekJ" secondAttribute="bottom" constant="13" id="8pf-Uj-PHJ"/>
+                                            <constraint firstItem="ZHO-He-6uj" firstAttribute="top" secondItem="pYl-xP-w5S" secondAttribute="top" id="EWz-kl-hXn"/>
                                             <constraint firstItem="pYl-xP-w5S" firstAttribute="centerX" secondItem="ngt-9R-axA" secondAttribute="centerX" id="Ieg-4D-6vG"/>
                                             <constraint firstAttribute="trailing" secondItem="V7P-Cd-upW" secondAttribute="trailing" constant="20" id="Qus-R2-dDe"/>
                                             <constraint firstItem="Xcm-a8-ekJ" firstAttribute="top" secondItem="V7P-Cd-upW" secondAttribute="bottom" constant="10" id="RlY-cz-5vf"/>
                                             <constraint firstItem="VnX-Tv-v1I" firstAttribute="leading" secondItem="IT5-KN-vbX" secondAttribute="leading" id="cEr-FR-dNB"/>
                                             <constraint firstItem="YEK-zx-MLR" firstAttribute="top" secondItem="d9H-xu-1wD" secondAttribute="bottom" constant="20" id="eJS-Nk-WrC"/>
                                             <constraint firstItem="IT5-KN-vbX" firstAttribute="leading" secondItem="ngt-9R-axA" secondAttribute="leading" constant="30" id="fY3-2N-sON"/>
+                                            <constraint firstItem="ZHO-He-6uj" firstAttribute="leading" secondItem="pYl-xP-w5S" secondAttribute="trailing" constant="-19" id="h4S-Kg-ykU"/>
                                             <constraint firstAttribute="trailing" secondItem="IT5-KN-vbX" secondAttribute="trailing" constant="30" id="hYh-uX-4s6"/>
                                             <constraint firstItem="9s1-My-7VU" firstAttribute="trailing" secondItem="YEK-zx-MLR" secondAttribute="trailing" id="jty-68-gxf"/>
                                             <constraint firstItem="9s1-My-7VU" firstAttribute="top" secondItem="YEK-zx-MLR" secondAttribute="bottom" constant="5" id="mT4-Wp-ARX"/>
@@ -153,6 +162,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" systemColor="linkColor"/>
                                 <constraints>
                                     <constraint firstItem="ngt-9R-axA" firstAttribute="top" secondItem="Twi-ZW-ulm" secondAttribute="top" id="0UY-yZ-YSH"/>
                                     <constraint firstItem="ngt-9R-axA" firstAttribute="leading" secondItem="Twi-ZW-ulm" secondAttribute="leading" id="3Mb-Wg-Ny6"/>
@@ -177,6 +187,7 @@
                     <connections>
                         <outlet property="btnAddEditDel" destination="IT5-KN-vbX" id="2vU-o3-ZbA"/>
                         <outlet property="imgAddImage" destination="wob-51-dAr" id="rjN-ZQ-n57"/>
+                        <outlet property="imgCross" destination="ZHO-He-6uj" id="6fb-a1-RrB"/>
                         <outlet property="imgProdImage" destination="pYl-xP-w5S" id="Gy9-8E-pE5"/>
                         <outlet property="lblAddNewItem" destination="Xcm-a8-ekJ" id="ceH-iB-9bk"/>
                         <outlet property="lblHeadingAddNewPro" destination="V7P-Cd-upW" id="yNp-Pz-caf"/>
@@ -186,12 +197,16 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xd4-P4-eUi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5150" y="1010"/>
+            <point key="canvasLocation" x="5148.8372093023254" y="1009.4420600858369"/>
         </scene>
     </scenes>
     <resources>
-        <image name="plus" catalog="system" width="128" height="113"/>
-        <image name="plus.circle" catalog="system" width="128" height="123"/>
+        <image name="cross" width="128" height="128"/>
+        <image name="plus" catalog="system" width="32" height="32"/>
+        <image name="plus.circle" catalog="system" width="32" height="32"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
